--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,3 +8,7 @@
 @import '~bootstrap/scss/bootstrap';
 
 
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/solid"; // fas
+@import "~@fortawesome/fontawesome-free/scss/regular"; // far
+@import "~@fortawesome/fontawesome-free/scss/brands"; // fab
